[metadata]
name = advanced-argparse
version = 0.1.0
author = Alex Gorodnitskiy
author_email = alexander.gorodnitskiy@phystech.edu
description = Advanced parser based on argparse and YAML config
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gorodnitskiy/advanced_argparse

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    PyYAML
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
